@@ -1,1 +1,0 @@
-#define PQXX_HAVE_PQFTABLE 1
